@@ -11,11 +11,9 @@ import java.util.stream.Collectors;
 
 import org.springframework.scheduling.annotation.Async;
 import org.springframework.stereotype.Service;
-import com.fasterxml.jackson.databind.ObjectMapper;
-import com.netpickz.api.mail.MailController;
+
 import com.netpickz.api.movie.request.FilterRequest;
 import com.netpickz.api.movie.request.RatingRequest;
-import com.netpickz.api.reco.RecommendController;
 import com.netpickz.common.dto.CertificationDTO;
 import com.netpickz.common.dto.GenreDTO;
 import com.netpickz.common.dto.ProviderDTO;
@@ -24,6 +22,7 @@ import com.netpickz.common.entity.GenreEntity;
 import com.netpickz.common.enumType.AsyncType;
 import com.netpickz.common.enumType.ErrorCode;
 import com.netpickz.common.enumType.MovieCategory;
+import com.netpickz.common.enumType.MovieStatusType;
 import com.netpickz.common.enumType.TimeType;
 import com.netpickz.common.handler.NetPickzException;
 import com.netpickz.common.repository.CertificationRepository;
@@ -40,10 +39,10 @@ import com.netpickz.core.movie.dto.MovieDTO;
 import com.netpickz.core.movie.dto.MovieListPageDTO;
 import com.netpickz.core.movie.dto.RatingDTO;
 import com.netpickz.core.movie.entity.MovieGenreEntity;
+import com.netpickz.core.movie.entity.MovieInfoEntity;
 import com.netpickz.core.movie.entity.MovieProviderEntity;
 import com.netpickz.core.movie.entity.pk.MovieGenrePK;
 import com.netpickz.core.movie.mapper.MovieMapper;
-import com.netpickz.core.movie.repository.MovieInfoRepository;
 import com.netpickz.core.movie.repository.MovieProviderRepository;
 import com.netpickz.core.movie.repository.MovieRepository;
 import com.netpickz.core.user.service.UserService;
@@ -57,8 +56,6 @@ import lombok.extern.slf4j.Slf4j;
 @RequiredArgsConstructor
 public class MovieServiceImpl implements MovieService {
 
-
-    private final MovieInfoRepository movieInfoRepository;
 	private final MovieRepository movieRepository;
 	private final GenreRepository genreRepository;
 	private final CertificationRepository certificationRepository;
@@ -67,7 +64,6 @@ public class MovieServiceImpl implements MovieService {
 	private final TmdbClient tmdbClient;
 	private final UserService userService;
 	private final MovieMapper movieMapper;
-
 
 	@Transactional
 	@Override
@@ -96,7 +92,8 @@ public class MovieServiceImpl implements MovieService {
 		var movieEntity = movieMapper.tmdbMovieToEntity(response, movieId);
 		// 2. 자식 엔티티 저장
 		var infoEntity = movieMapper.tmdbMovieToInfoEntity(response);
-		
+		infoEntity.setReleaseDate(null);
+		infoEntity.setStatus(MovieStatusType.Post_Production.name());
 		// 3. genres 엔티티 저장
 		var movieGenresEntity = movieMapper.tmdbGenresToMovieGenreEntity(response.getGenres(),movieEntity);
 		for (MovieGenreEntity e : movieGenresEntity) {
@@ -109,7 +106,7 @@ public class MovieServiceImpl implements MovieService {
 		// 4. provider 엔티티 저장(개봉 중인 영화는 안뜨니까 존재하는 애들만)
 		var tmdbProviderByIdResponse = tmdbClient.getWatchProviderList(TmdbMovieRequest.builder().movieId(Integer.valueOf(id)).build()).getBody();
 			var providerResponse = tmdbProviderByIdResponse.getResults().get("KR");
-			if(providerResponse != null) {
+			if(providerResponse != null && providerResponse.getFlatrate() != null) {
 				var movieProvidersEntity = movieMapper.tmdbWatchProvidersToEntity(providerResponse.getFlatrate(), movieEntity);
 				for(MovieProviderEntity e : movieProvidersEntity) {
 					e.setMovieEntity(movieEntity);
@@ -117,22 +114,9 @@ public class MovieServiceImpl implements MovieService {
 				}
 				movieEntity.setProviders(movieProvidersEntity);
 			}
-		// 5. certifications 값 가져와서 저장
-		var releaseRes = tmdbClient.getReleaseDateList(TmdbMovieRequest.builder().movieId(response.getId()).build()).getBody();
-		if(releaseRes != null) {
-	        var krReleaseDate = releaseRes.getResults().stream()
-	                .filter(r -> "KR".equals(r.getCountryCode()))
-	                .flatMap(r -> r.getReleaseDates().stream())
-	                .filter(rd -> rd.getType() == 3 || rd.getType() == 4)
-	                .findFirst();
-	        if(krReleaseDate.isPresent()) {
-	        	var certCode = krReleaseDate.get().getCertification();
-	        	if ("18".equals(certCode)) {
-	        	    certCode = "19"; // 한국 기준 최신 등급으로 보정
-	        	}
-	        	infoEntity.setCertificationEntity(CertificationEntity.builder().certificationId(certCode).build());
-	        }
-		}
+		// 5. 국내 개봉했는지 체크 후 certifications,status, releaseDate 값 가져와서 저장
+		setKrReleaseInfo(response, infoEntity);
+		
 		// 연관관계 양쪽 세팅 (중요!)
 		infoEntity.setMovieEntity(movieEntity);
 		movieEntity.setMovieInfo(infoEntity);
@@ -161,9 +145,9 @@ public class MovieServiceImpl implements MovieService {
 			movieInfo.setOverView(response.getOverview());
 			movieInfo.setPosterPath(response.getPosterPath());
 			movieInfo.setRuntime(response.getRuntime());
-			movieInfo.setReleaseDate(response.getReleaseDate());
-			movieInfo.setStatus(response.getStatus());
-
+			
+			setKrReleaseInfo(response, movieInfo);
+			
 			response.getGenres().stream().forEach((e) -> {
 				if(!genreRepository.existsById(String.valueOf(e.getId()))) {
 					genreRepository.save(GenreEntity.builder().id(String.valueOf(e.getId())).name(e.getName()).build());
@@ -187,6 +171,28 @@ public class MovieServiceImpl implements MovieService {
 			log.debug("Movie upsert: movieId={}", upsertMovie.getMovieId());
 		}
 		return  movieRepository.findByMovieId(movieId);
+	}
+
+	private void setKrReleaseInfo(TmdbMovieResponse response, MovieInfoEntity movieInfo) {
+		var releaseRes = tmdbClient.getReleaseDateList(TmdbMovieRequest.builder().movieId(response.getId()).build()).getBody();
+		if(releaseRes != null) {
+		    var krReleaseDate = releaseRes.getResults().stream()
+		            .filter(r -> "KR".equals(r.getCountryCode()))
+		            .flatMap(r -> r.getReleaseDates().stream())
+		            .findFirst();
+		    if(krReleaseDate.isPresent()) {
+		    	var certCode = krReleaseDate.get().getCertification();
+		    	var releaseDate = krReleaseDate.get().getReleaseDate();
+		    	if ("18".equals(certCode)) {
+		    	    certCode = "19"; // 한국 기준 최신 등급으로 보정
+		    	}
+		    	var formatter = DateTimeFormatter.ofPattern("yyyy-MM-dd'T'HH:mm:ss.SSSX");
+		    	movieInfo.setReleaseDate(LocalDate.parse(releaseDate, formatter).toString());
+				movieInfo.setStatus(MovieStatusType.Released.name());
+				if(certCode != null && !certCode.isBlank())
+				movieInfo.setCertificationEntity(CertificationEntity.builder().certificationId(certCode).build()); // TODO
+		    }
+		}
 	}
 
 	@Override
@@ -254,25 +260,6 @@ public class MovieServiceImpl implements MovieService {
 		return CompletableFuture.completedFuture(typeMovieDtos);
 	}
 	
-	
-//	public CompletableFuture<List<MovieDTO>> getMovieListByType(MovieCategory category) {
-//		log.debug("Find CategoryMovieList. category={}", category);
-//		var krReleasedMovies = new ArrayList<TmdbMovieResponse>();
-//		
-//		var page = 1;
-//		while(krReleasedMovies.size() < 10) {
-//			var tmdbMoviesResponse = tmdbClient.getMovieList(TmdbMovieCategory.valueOf(category.getValue()), page).getBody();
-//			if(tmdbMoviesResponse == null || tmdbMoviesResponse.getResults() == null || tmdbMoviesResponse.getResults().isEmpty() ) {
-//				return Collections.emptyList();
-//			}
-//			getKrReleasedTmdbMovies(krReleasedMovies, tmdbMoviesResponse);
-//			page++;
-//		}
-//		var typeMovieDtos = movieMapper.tmdbMoviesToMovieDto(krReleasedMovies);
-//		log.info("MovieList By Category Found. count={}", typeMovieDtos.size());
-//		return typeMovieDtos;
-//	}
-
 	@Async
 	@Override
 	public CompletableFuture<List<MovieDTO>> getMovieListByTimeType(TimeType timeType) {
@@ -316,7 +303,7 @@ public class MovieServiceImpl implements MovieService {
 		
 		var tmdbProviderByIdResponse = tmdbClient.getWatchProviderList(TmdbMovieRequest.builder().movieId(Integer.valueOf(movie.getId())).build()).getBody();
 		var providerResponse = tmdbProviderByIdResponse.getResults().get("KR");
-		if(providerResponse != null) {
+		if(providerResponse != null && providerResponse.getFlatrate() != null) {
 			var movieProvidersEntity = movieMapper.tmdbWatchProvidersToEntity(providerResponse.getFlatrate(), movie);
 			for(MovieProviderEntity e : movieProvidersEntity) {
 				e.setMovieEntity(movie);
@@ -327,7 +314,7 @@ public class MovieServiceImpl implements MovieService {
 			log.info("ProviderMovieList Found. movieId={}, count={}", movieId, movieDtos.size());
 			return movieDtos;
 		}
-		return List.of();
+		return Collections.emptyList();
 	}
 	
 	@Async
@@ -336,7 +323,6 @@ public class MovieServiceImpl implements MovieService {
 		log.debug("Find MovieSimilarList. movieId={}", movieId);
 		
 		var krReleasedMovies = new ArrayList<TmdbMovieResponse>();
-		// TODO 결과 없을때 
 		var movie = movieRepository.findById(movieId)
 				.orElseThrow(() -> new NetPickzException(ErrorCode.MOVIE_NOT_FOUND));
 		
@@ -352,7 +338,6 @@ public class MovieServiceImpl implements MovieService {
 			getKrReleasedTmdbMovies(krReleasedMovies, tmdbSimilarResponse, 10 );
 			page++;
 		}
-
 		var similarMovieDtos = movieMapper.tmdbMoviesToMovieDto(krReleasedMovies);
 		log.info("ProviderMovieList Found. movieId={}, count={}", movieId, similarMovieDtos.size());
 		return CompletableFuture.completedFuture(similarMovieDtos);
@@ -378,14 +363,16 @@ public class MovieServiceImpl implements MovieService {
 		// TODO 레디스에다가 조회한 데이터 id 값 저장하기 + 중복 안되도록
 		while(krReleasedMovies.size() < 12) {
 			var tmdbMoviesResponse = tmdbClient.getMovieListBySearch(title,page).getBody();
-			System.out.println(tmdbMoviesResponse.toString());
-			totalCount = tmdbMoviesResponse.getTotalResults();
-			totalPage = tmdbMoviesResponse.getTotalPages();
 			if(tmdbMoviesResponse == null || tmdbMoviesResponse.getResults() == null || tmdbMoviesResponse.getResults().isEmpty()) {
+				if(page > 1) {
+					break;
+				}
 				return CompletableFuture.completedFuture(null);// TODO
 			}
+			totalCount = tmdbMoviesResponse.getTotalResults();
+			totalPage = tmdbMoviesResponse.getTotalPages();
 			getKrReleasedTmdbMovies(krReleasedMovies, tmdbMoviesResponse, 12);
-			page++;//TODO
+			page++; 
 		}
 		// TODO 추후 vue 쪽에서 한 페이제 몇개 쩡도를 보여줄 지를 정한뒤 반환 리스트 크기 정해서 조절 필요
 //		var filterData = fetchKrReleasedTmdbMovies(tmdbMoviesResponse);
@@ -395,7 +382,6 @@ public class MovieServiceImpl implements MovieService {
 		var movieListDtos = MovieListPageDTO.builder().movieDtos(movieDtos).totalPage(totalPage).totalCount(totalCount).build();
 		log.info("MovieList Found. totalCount={}, totalPage={}, count={}", movieListDtos.getTotalCount(), movieListDtos.getTotalPage(), movieListDtos.getTotalCount());
 		return CompletableFuture.completedFuture(movieListDtos);
-//		return CompletableFuture.completedFuture(movieDtos);
 	}
 
 	@Async
@@ -444,42 +430,51 @@ public class MovieServiceImpl implements MovieService {
 	}
 
 	@Override
-	public boolean deleteRatingByUserId(String movieId, String sessionId) {
-		log.debug("Delte Rating. movieId={}, sessionId={}", movieId, sessionId);
+	public Optional<RatingDTO> getRatingByUserId(String movieId, String userId) {
+		log.debug("get Rating. movieId={}, userId={}", movieId, userId);
+		return userService.getRatingByUser(movieId, userId);
+	}
+	
+	@Override
+	public boolean deleteRatingByUserId(String movieId, String userId) {
+		log.debug("Delte Rating. movieId={}, userId={}", movieId, userId);
 		var movie = movieRepository.findById(movieId)
 					.orElseThrow(() -> new NetPickzException(ErrorCode.MOVIE_NOT_FOUND));
-		var tmdbRatingResponse = tmdbClient.deleteRating(TmdbMovieRequest.builder().movieId(Integer.valueOf(movie.getId()))
-				.sessionId(sessionId)
-				.build());
-	    if (tmdbRatingResponse == null ) {
-	        log.warn("TMDB deleteRating response is null. movieId={}, sessionId={}", movieId, sessionId);
-	        throw new NetPickzException(ErrorCode.RATING_DELETE_FAILED);
-	    }
-
-		var statusCode = tmdbRatingResponse.getBody().getStatusCode();
-		if(statusCode == 13 ) { // TODO code enum 값으로 
-			userService.deleteRatingByUser(movieId, sessionId); 
-			log.info("Rating deleted successfully. movieId={}, sessionId={}", movieId, sessionId);
-			return true;
+		var ratingDto = userService.getRatingByUser(movieId, userId);
+		if(ratingDto.isPresent()) {
+			var sessionId = ratingDto.get().getSessionId();
+			var tmdbRatingResponse = tmdbClient.deleteRating(TmdbMovieRequest.builder().movieId(Integer.valueOf(movie.getId()))
+					.sessionId(sessionId)
+					.build());
+			if (tmdbRatingResponse == null ) {
+				log.warn("TMDB deleteRating response is null. movieId={}, sessionId={}", movieId, sessionId);
+				throw new NetPickzException(ErrorCode.RATING_DELETE_FAILED);
+			}
+			
+			var statusCode = tmdbRatingResponse.getBody().getStatusCode();
+			if(statusCode == 13 ) { // TODO code enum 값으로 
+				userService.deleteRatingByUser(movieId, sessionId); 
+				log.info("Rating deleted successfully. movieId={}, sessionId={}", movieId, sessionId);
+				return true;
+			}
 		}
-		throw new NetPickzException(ErrorCode.RATING_DELETE_FAILED);
+		throw new NetPickzException(ErrorCode.RATING_NOT_FOUND);
 	}
 
 	@Override
 	public List<MovieDTO> getMovieCertification(String id) {
 		log.debug("get Certification. id={}", id);
 		var tmdbResponse = tmdbClient.getReleaseDateList(TmdbMovieRequest.builder().movieId(Integer.valueOf(id)).build()).getBody();
-		System.out.println(tmdbResponse);
 		if(tmdbResponse == null) {
-			throw new NetPickzException(ErrorCode.TMDB_MOVIE_NOT_FOUND); //
+			throw new NetPickzException(ErrorCode.TMDB_MOVIE_NOT_FOUND);
 		}
 		var res = tmdbResponse.getResults().stream().filter(e -> e.getCountryCode().equals("KR")).toList();
-		
-		var movieDtos = movieMapper.tmdbReleaseDateToMovieDto(res); // 
+		var movieDtos = movieMapper.tmdbReleaseDateToMovieDto(res);
 		log.info("movie certification Found. count={}", movieDtos.size());
 		return movieDtos;
 	}
 	
+	// TODO
 	private List<TmdbMovieResponse> getKrReleasedTmdbMovies(List<TmdbMovieResponse> krReleasedMovies,
 			TmdbMovieListResponse tmdbMoviesResponse , int size) {
 		var filterData = fetchKrReleasedTmdbMovies(tmdbMoviesResponse);
@@ -499,15 +494,14 @@ public class MovieServiceImpl implements MovieService {
 			        var krReleaseDate = releaseRes.getResults().stream()
 		                    .filter(r -> "KR".equals(r.getCountryCode()))
 		                    .flatMap(r -> r.getReleaseDates().stream())
-//		                    .filter(rd -> rd.getType() == 3 || rd.getType() == 4)
 		                    .findFirst();
 			        var formatter = DateTimeFormatter.ofPattern("yyyy-MM-dd'T'HH:mm:ss.SSSX");
-
 		            krReleaseDate.ifPresent(rd -> movie.setReleaseDate(LocalDate.parse(rd.getReleaseDate(), formatter).toString())); // ✅ 날짜 세팅(TODO 추후 좀 더 체크 필요)
 		            return krReleaseDate.isPresent(); // ✅ filter 조건rd.getReleaseDate()
 
 			    })
 			    .toList();
 	}
+
 
 }
